config/app/deployment.yml
#@ load("@ytt:data", "data")
---
apiVersion: v1
kind: Namespace
metadata:
  labels:
    kubernetes.io/metadata.name: #@ data.values.namespace
  name: #@ data.values.namespace
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: doc
  namespace: #@ data.values.namespace
  labels:
    app: doc
  annotations:
    kapp.k14s.io/change-group: app
    #@ if data.values.db_driver == "postgres":
    kapp.k14s.io/change-rule: "upsert after upserting db"
    #@ end
spec:
  replicas: 1
  selector:
    matchLabels:
      app: doc
  template:
    metadata:
      labels:
        app: doc
    spec:
      #@ if data.values.image_proxy != "" and data.values.image_proxy_username != "":
      imagePullSecrets:
        - name: registry-credentials
      #@ end
      containers:
        - name: doc
          image: #@ data.values.doc_image
          imagePullPolicy: Always
          ports:
            - containerPort: #@ data.values.app_port
              name: http
          volumeMounts:
            - name: data
              mountPath: /data
          #@ end
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            privileged: false
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              memory: "64Mi"
              cpu: "250m"
            limits:
              memory: "256Mi"
          readinessProbe:
            httpGet:
              path: /
              port: #@ data.values.app_port
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: #@ data.values.app_port
            initialDelaySeconds: 15
            periodSeconds: 20
      #@ if data.values.db_driver == "sqlite":
      volumes:
        - name: data
          emptyDir: {}
      #@ end
