config/app/gitter-service.yml
#@ load("@ytt:data", "data")

#! The standalone gitter service is only needed in postgres mode.
#@ if data.values.db_driver == "postgres":
---
apiVersion: v1
kind: Service
metadata:
  name: gitter-service
  namespace: #@ data.values.namespace
  labels:
    app: doc
    component: gitter
spec:
  type: ClusterIP
  selector:
    app: doc
    component: gitter
  ports:
    - protocol: TCP
      port: 1234
      targetPort: 1234
      name: rpc
#@ end
